--- a/CSharp Fundamentals/HelloWorld/HelloWorld.csproj
+++ b/CSharp Fundamentals/HelloWorld/HelloWorld.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{41CDED24-913F-4CF3-BA50-F765C544BBDD}</ProjectGuid>
+    <ProjectGuid>{F0D6276D-A6B4-4604-B1B4-FB67CB6FBAF6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>First_CSharp</RootNamespace>
-    <AssemblyName>First CSharp</AssemblyName>
+    <RootNamespace>HelloWorld</RootNamespace>
+    <AssemblyName>HelloWorld</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
